--- a/floating-pane.html
+++ b/floating-pane.html
@@ -1,6 +1,9 @@
 <!---
 
 TODO: on window resize ensure that pane isn't off screen, and move on screen if needed.
+
+TODO: this shoudl be implemented in terms pf IronOverlayBehavior
+
 -->
 
 <link rel="import" href="bower_components/polymer/polymer.html">
@@ -12,10 +15,10 @@ TODO: on window resize ensure that pane isn't off screen, and move on screen if 
 background: #333;
 color: #fff;
 font-weight: bold;
-display: block;
 padding: 5px;
 display: flex;
 flex-direction: row;
+min-height: 14px;
 }
 :host{
 position: fixed;
@@ -27,10 +30,24 @@ min-width: 200px;
 max-width: 400px;
 max-height: 600px;
 background-color: rgba(255,255,255,0.92);
-display: none;
 z-index: 100;
 cursor: move;
 box-shadow: 3px 3px 7px #999;
+display: flex;
+flex-direction: column;
+}
+::-webkit-scrollbar {
+width: 10px;
+height: 10px;
+}
+::-webkit-scrollbar-button {
+width: 0;
+height: 0;
+display: none;
+}
+::-webkit-scrollbar-thumb {
+background-color: rgba(0,0,0,0.2);
+-webkit-box-shadow: inset 1px 1px 0 rgba(0,0,0,0.10),inset 0 -1px 0 rgba(0,0,0,0.07);
 }
 .pane_title.wide{
 min-width: 360px;
@@ -38,6 +55,8 @@ min-width: 360px;
 .pane_body{
 padding: 5px;
 border: 1px solid #000;
+flex: 2;
+overflow-y: auto;
 }
 .grabber{
 position: absolute;
@@ -83,6 +102,7 @@ var init_x = 100;
 
 Polymer({
     is: 'floating-pane',
+    behaviors: [Polymer.IronResizableBehavior],
     properties: {
         space_is_down: {
             type: Boolean,
@@ -112,6 +132,8 @@ Polymer({
 
     }, attached: function(){
         var self = this;
+        this.setAttribute('hidden',true);
+
         // I don't get Polymer's listener thing..or maybe I do, but this works fine..
         this.$.grabber.addEventListener('mouseup', this._on_mouseup.bind(this));
         this.addEventListener('mousedown', this._on_drag_start.bind(this));
@@ -160,6 +182,14 @@ Polymer({
         this.transform('translate(' + x + "px, " + y + "px)");
     }, _wide: function(v){
         return v ? "wide" : "";
+    }, toggle: function(){
+        if(this.getAttribute('hidden')){
+            this.removeAttribute('hidden');
+            this.style.zIndex = ++top_x_index;
+        } else {
+            this.setAttribute('hidden', "true");            
+        }
+        this.notifyResize();
     }
 });
 
