--- a/header-view.html
+++ b/header-view.html
@@ -39,6 +39,19 @@ width: 100%;
 --iron-list-items-container: {
   };
 }
+::-webkit-scrollbar {
+width: 10px;
+height: 10px;
+}
+::-webkit-scrollbar-button {
+width: 0;
+height: 0;
+display: none;
+}
+::-webkit-scrollbar-thumb {
+background-color: rgba(0,0,0,0.2);
+-webkit-box-shadow: inset 1px 1px 0 rgba(0,0,0,0.10),inset 0 -1px 0 rgba(0,0,0,0.07);
+}
 .file_name{
 font-size: 10px;
 display: inline-block;
@@ -54,7 +67,7 @@ width: 100%;
 }
 </style>
 <template>
-    <iron-list items="{{_build_array(set_header, pos_header, tet_header, cut_header, header_filter)}}" as="item">
+    <iron-list id="the_list" items="{{_build_array(set_header, pos_header, tet_header, cut_header, header_filter, is_showing)}}" as="item">
         <template><div class="row">
             <div class$="[[item.class_a]]">
                 [[item.name]]
@@ -73,6 +86,10 @@ width: 100%;
 
 Polymer({
     is: 'header-view',
+    behaviors: [Polymer.IronResizableBehavior],
+    listeners: {
+        'iron-resize': '_on_resize'
+    },
     properties: {
         header_filter: {
             type: String,
@@ -98,6 +115,12 @@ Polymer({
             type: Object,
             value: function(){ return {};},
             notify: true
+        },
+        is_showing: {
+            type: Boolean,
+            value: false,
+            notify: true,
+            readOnly: true
         }
     }, observers: [
         "_clear_cache('pos', pos_header)",
@@ -107,10 +130,24 @@ Polymer({
     ], created: function(){
         this._cache = {};
         this._cached_for = {}; // if _clear_cache was guaranteed to be called before _build_array we wouldn't need this
+    }, _on_resize: function(){
+        let showing = true;
+        let node = this.parentNode;
+        while(node){
+            if(node.hidden){
+                showing = false;
+                break;
+            }
+            node = node.parentNode;
+        }
+        this._setIs_showing(showing);
     }, _clear_cache: function(t, ignored){
         this._cache[t] = undefined;
         this._cached_for[t] = undefined;
-    }, _build_array: function(set_header, pos_header, tet_header, cut_header, header_filter) {
+    }, _build_array: function(set_header, pos_header, tet_header, cut_header, header_filter, is_showing) {
+            if(!this.is_showing){
+                return [];
+            }
             var a = [];         
             for(let t of new Set(['tet', 'cut', 'pos', 'set'])){
                 let header = this[t + '_header'];
